Update company name, phone, and email to Velmurugan Stone Crushers, +91 9959796665, general.vmsc@gmail.com

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "VMBM",
-  "name": "VMBM Aggregate Products",
+  "short_name": "Velmurugan Stone Crushers",
+  "name": "Velmurugan Stone Crushers Aggregate Products",
   "icons": [
     {
       "src": "favicon.ico",
