--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vmbm-client",
+  "name": "velmurugan-stone-crushers-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
